tests/enum/tenumitems.nim
discard """
  line: 7
  errormsg: "attempting to call routine: 'items'"
"""

type a = enum b,c,d
a.items()


